[package]
name = "dropbox"
version = "0.2.0"
authors = ["ceox <ceox4510471@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
hyper = "0.12.16"
hyper-tls = "0.3.1"
futures = "0.1.25"
tokio = "0.1.13"
tokio-core = "0.1.17"
log = "0.4.6"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "dropbox"
path = "src/lib.rs"
